--- a/team-members/pannakron.html
+++ b/team-members/pannakron.html
@@ -135,7 +135,7 @@
 
   <div class="card">
     <div class="left">
-      <img src="pannakron.jpg" alt="Pannakron">
+      <img class="avatar" src="images/pannakron.jpg" alt="Pannakron">
       <h2>Pannakron Kongsawat</h2>
       <p>สมาชิกทีม B-8 Lungs</p>
     </div>
