--- a/team-members/pannakron.html
+++ b/team-members/pannakron.html
@@ -144,18 +144,18 @@
       <h3>เกี่ยวกับฉัน</h3>
       <div class="chips">
         <span class="chip">Hobby: เล่นเกม</span>
-        <span class="chip">Hobby: อ่านการ์ตูน</span>
-        <span class="chip">Future: Developer</span>
+        <span class="chip">Hobby: เล่นกีฬา</span>
+        <span class="chip">Future: Footballworldclass player </span>
       </div>
 
       <div class="info">
-        <p><b>Email:</b> pannakron.k@example.com</p>
+        <p><b>Email:</b> pannakorn.kongsawat@gmail.com</p>
         <p><b>Facebook:</b> pannakron kongsawat</p>
       </div>
 
       <div class="info">
-        <p>🎮 เกมที่ชอบ: Wuthering Waves, BlueArchive, Uma Musume Pretty Derby</p>
-        <p>💚 ชอบธรรมชาติ สีเขียว และของหวาน</p>
+        <p>🎮 เกมที่ชอบ: pes,rov,lol</p>
+        <p>💚 ชอบธรรมชาติ สีเขียว และ ฟุตบอล</p>
       </div>
 
       <a href="../index.html" class="btn">← กลับหน้า Team</a>
