--- a/team-members/pannakron.html
+++ b/team-members/pannakron.html
@@ -14,6 +14,7 @@
       align-items: center;
       min-height: 100vh;
       color: #081c15;
+      overflow: hidden; /* กัน scrollbar */
     }
 
     .card {
@@ -25,6 +26,8 @@
       display: grid;
       grid-template-columns: 260px 1fr;
       overflow: hidden;
+      position: relative;
+      z-index: 2; /* ให้อยู่เหนือ emoji */
     }
 
     .left {
@@ -47,31 +50,13 @@
       box-shadow: 0 5px 15px rgba(0,0,0,0.2);
     }
 
-    .left h2 {
-      margin: 10px 0 0;
-      font-size: 24px;
-    }
+    .left h2 { margin: 10px 0 0; font-size: 24px; }
+    .left p { margin: 6px 0; font-size: 14px; opacity: 0.9; }
 
-    .left p {
-      margin: 6px 0;
-      font-size: 14px;
-      opacity: 0.9;
-    }
+    .right { padding: 30px; }
+    .right h3 { margin-bottom: 12px; font-size: 20px; color: #1b4332; }
 
-    .right {
-      padding: 30px;
-    }
-
-    .right h3 {
-      margin-bottom: 12px;
-      font-size: 20px;
-      color: #1b4332;
-    }
-
-    .chips {
-      margin-bottom: 20px;
-    }
-
+    .chips { margin-bottom: 20px; }
     .chip {
       display: inline-block;
       background: #d8f3dc;
@@ -91,10 +76,7 @@
       border-radius: 12px;
       margin-bottom: 15px;
     }
-
-    .info p {
-      margin: 6px 0;
-    }
+    .info p { margin: 6px 0; }
 
     .btn {
       display: inline-block;
@@ -107,17 +89,30 @@
       transition: 0.3s;
       margin: 10px 10px 0 0;
     }
-
-    .btn:hover {
-      background: #1b4332;
-      transform: translateY(-2px);
-    }
+    .btn:hover { background: #1b4332; transform: translateY(-2px); }
 
     footer {
       text-align: center;
       margin-top: 20px;
       color: #40916c;
       font-size: 13px;
+      z-index: 2;
+      position: relative;
+    }
+
+    /* ⚽ ลูกฟุตบอลเคลื่อนไหว */
+    .ball {
+      position: fixed;
+      pointer-events: none;
+      z-index: 1;
+      animation: moveBall linear forwards;
+    }
+
+    @keyframes moveBall {
+      0% { transform: translateY(-10vh) rotate(0deg); opacity: 0; }
+      10% { opacity: 1; }
+      50% { transform: translateY(50vh) rotate(180deg); opacity: 0.9; }
+      100% { transform: translateY(110vh) rotate(360deg); opacity: 0; }
     }
 
     @media(max-width: 720px) {
@@ -125,9 +120,7 @@
         grid-template-columns: 1fr;
         text-align: center;
       }
-      .left {
-        border-radius: 20px 20px 0 0;
-      }
+      .left { border-radius: 20px 20px 0 0; }
     }
   </style>
 </head>
@@ -135,7 +128,7 @@
 
   <div class="card">
     <div class="left">
-      <img class="avatar" src="images/pannakron.jpg" alt="Pannakron">
+      <img src="pannakron.jpg" alt="Pannakron">
       <h2>Pannakron Kongsawat</h2>
       <p>สมาชิกทีม B-8 Lungs</p>
     </div>
@@ -145,7 +138,7 @@
       <div class="chips">
         <span class="chip">Hobby: เล่นเกม</span>
         <span class="chip">Hobby: เล่นกีฬา</span>
-        <span class="chip">Future: Footballworldclass player </span>
+        <span class="chip">Future: Football worldclass player</span>
       </div>
 
       <div class="info">
@@ -154,17 +147,47 @@
       </div>
 
       <div class="info">
-        <p>🎮 เกมที่ชอบ: pes,rov,lol</p>
+        <p>🎮 เกมที่ชอบ: pes, rov, lol</p>
         <p>💚 ชอบธรรมชาติ สีเขียว และ ฟุตบอล</p>
       </div>
 
       <a href="../index.html" class="btn">← กลับหน้า Team</a>
       <a href="kittinun.html" class="btn">ไปหน้า Kittinun</a>
-      <a href="phuttargue.html" class="btn">ไปหน้า phuttague</a>
+      <a href="phuttargue.html" class="btn">ไปหน้า phuttargue</a>
     </div>
   </div>
 
   <footer>© 2025 Team B-8 • Green Theme</footer>
 
+  <script>
+    function createBall() {
+      const ball = document.createElement('div');
+      ball.textContent = '⚽';
+      ball.classList.add('ball');
+
+      // ขนาดสุ่ม
+      ball.style.fontSize = (30 + Math.random() * 40) + 'px';
+
+      // ตำแหน่ง X สุ่ม
+      ball.style.left = Math.random() * 100 + 'vw';
+
+      // ความเร็วสุ่ม
+      const duration = 6 + Math.random() * 5;
+      ball.style.animationDuration = duration + 's';
+
+      document.body.appendChild(ball);
+
+      // ลบเมื่อจบแอนิเมชัน
+      ball.addEventListener('animationend', () => {
+        ball.remove();
+        createBall(); // สร้างใหม่เรื่อย ๆ
+      });
+    }
+
+    // เริ่มด้วย 12 ลูก
+    for (let i = 0; i < 12; i++) {
+      setTimeout(createBall, i * 1000);
+    }
+  </script>
 </body>
 </html>
