--- a/team-members/pannakron.html
+++ b/team-members/pannakron.html
@@ -125,13 +125,12 @@
   </style>
 </head>
 <body>
+<div class="left">
+  <img src="images/pannakron.jpg" alt="Pannakron">
+  <h2>Pannakron Kongsawat</h2>
+  <p>สมาชิกทีม B-8 Lungs</p>
+</div>
 
-  <div class="card">
-    <div class="left">
-      <img src="pannakron.jpg" alt="Pannakron">
-      <h2>Pannakron Kongsawat</h2>
-      <p>สมาชิกทีม B-8 Lungs</p>
-    </div>
 
     <div class="right">
       <h3>เกี่ยวกับฉัน</h3>
