--- a/team-members/pannakron.html
+++ b/team-members/pannakron.html
@@ -126,7 +126,7 @@
 </head>
 <body>
 <div class="left">
-  <img class="avatar" src="team-members/images/pannakron.jpg" alt="pannakron kongsawat">
+  <img class="avatar" src="images/pannakron.jpg" alt="pannakron kongsawat">
   <h2>Pannakron Kongsawat</h2>
   <p>สมาชิกทีม B-8 Lungs</p>
 </div>
