--- a/team-members/tantikon.html
+++ b/team-members/tantikon.html
@@ -127,9 +127,9 @@
   <div class="container">
     <div class="profile">
       <!-- เปลี่ยนลิงก์ภาพเป็นรูปจริงของคุณ -->
-      <img src="https://i.pravatar.cc/140?img=68" alt="Profile">
+     <img class="avatar" src="images/tantikon.jpg" alt="TONTIKORN CHUMJAI">
       <div class="profile-info">
-        <h2>About Me</h2>
+        <h2>TONTIKORN CHUMJAI</h2>
         <p>ชอบสีแดง ดำ และขาว</p>
         <p>งานอดิเรก: เล่นฟุตบอล</p>
       </div>
