--- a/team-members/tantikon.html
+++ b/team-members/tantikon.html
@@ -127,7 +127,7 @@
   <div class="container">
     <div class="profile">
       <!-- เปลี่ยนลิงก์ภาพเป็นรูปจริงของคุณ -->
-     <img class="avatar" src="images/tantikon.jpg" alt="TONTIKORN CHUMJAI">
+      <img class="avatar" src="images/tantikon.jpg" alt="TONTIKORN CHUMJAI">
       <div class="profile-info">
         <h2>TONTIKORN CHUMJAI</h2>
         <p>ชอบสีแดง ดำ และขาว</p>
@@ -148,8 +148,10 @@
 
     <div class="section contact">
       <h3>ติดต่อ</h3>
-      <a href="mailto:yourmail@gmail.com">📧 Email</a>
-      <a href="#">📘 Facebook</a>
+      <!-- ปุ่มอีเมล -->
+      <a href="mailto:tontikorn758@gmail.com">📧 Email: tontikorn758@gmail.com</a>
+      <!-- ปุ่มเฟสบุ๊ก (คุณอาจต้องใส่ลิงก์จริงของโปรไฟล์ FB) -->
+      <a href="https://www.facebook.com/search/top?q=Tonti%20Korn" target="_blank">📘 Facebook: Tonti Korn</a>
     </div>
   </div>
 
