--- a/team-members/pannakron.html
+++ b/team-members/pannakron.html
@@ -2,254 +2,370 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Pannakron Kongsawat — Profile</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: radial-gradient(circle at top left, #1b4332, #081c15);
-      color: #f1faee;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      overflow: hidden;
+    /* Reset */
+    * {
+      margin: 0; padding: 0; box-sizing: border-box;
+    }
+    body, html {
+      height: 100%;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(180deg, #d8f3dc, #b7e4c7, #95d5b2);
+      overflow-x: hidden;
+      color: #081c15;
+      user-select: none;
     }
 
+    /* Parallax Background Circles */
+    .bg-circle {
+      position: fixed;
+      border-radius: 50%;
+      background: rgba(30, 100, 50, 0.15);
+      pointer-events: none;
+      filter: blur(40px);
+      mix-blend-mode: multiply;
+      transition: transform 0.1s ease-out;
+      will-change: transform;
+    }
+    .bg-circle.c1 { width: 300px; height: 300px; top: 10vh; left: 15vw; }
+    .bg-circle.c2 { width: 400px; height: 400px; top: 50vh; left: 70vw; }
+    .bg-circle.c3 { width: 250px; height: 250px; top: 75vh; left: 30vw; }
+
+    /* Card */
     .card {
-      background: #1e2d24;
+      background: #ffffffee;
       border-radius: 20px;
-      box-shadow: 0 0 25px rgba(0, 255, 128, 0.2);
+      box-shadow: 0 10px 30px rgba(0, 100, 0, 0.25);
       max-width: 850px;
       width: 95%;
       display: grid;
       grid-template-columns: 260px 1fr;
       overflow: hidden;
       position: relative;
-      z-index: 2;
-      border: 2px solid #52b788;
+      margin: 40px auto;
+      z-index: 10;
     }
 
+    /* Left panel */
     .left {
-      background: linear-gradient(160deg, #2d6a4f, #081c15);
+      background: linear-gradient(160deg, #2d6a4f, #40916c);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       padding: 25px;
-      text-align: center;
+      color: #f1faee;
     }
-
-    .left img {
+    .left img.avatar {
       width: 180px;
       height: 180px;
       border-radius: 50%;
-      border: 5px solid #52b788;
+      border: 6px solid #95d5b2;
       object-fit: cover;
       margin-bottom: 15px;
-      box-shadow: 0 0 10px #52b788;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
     }
-
     .left h2 {
-      margin: 10px 0 5px;
+      margin: 10px 0 0;
       font-size: 24px;
+      letter-spacing: 0.05em;
+      font-weight: 700;
     }
-
     .left p {
+      margin: 6px 0;
       font-size: 14px;
       opacity: 0.9;
+      font-weight: 600;
     }
 
+    /* Right panel */
     .right {
       padding: 30px;
     }
-
     .right h3 {
       margin-bottom: 12px;
       font-size: 20px;
-      color: #80ed99;
+      color: #1b4332;
+      font-weight: 700;
+      letter-spacing: 0.03em;
     }
-
     .chips {
       margin-bottom: 20px;
     }
-
     .chip {
       display: inline-block;
-      background: #081c15;
-      border: 1px solid #52b788;
-      color: #b7e4c7;
+      background: #d8f3dc;
+      border: 1.5px solid #95d5b2;
+      color: #1b4332;
       padding: 6px 12px;
-      border-radius: 16px;
+      border-radius: 20px;
       font-size: 13px;
       font-weight: bold;
       margin: 5px;
-      transition: all 0.3s;
+      user-select: none;
     }
-
-    .chip:hover {
-      background: #2d6a4f;
-      transform: scale(1.05);
-    }
-
     .info {
-      background: #122a1f;
-      border: 1px solid #40916c;
+      background: #f6fff8;
+      border: 1.5px solid #b7e4c7;
       padding: 15px;
       border-radius: 12px;
       margin-bottom: 15px;
+      font-weight: 600;
     }
-
     .info p {
       margin: 6px 0;
+      line-height: 1.4;
     }
 
+    /* Buttons */
     .btn {
       display: inline-block;
-      background: #52b788;
-      color: #000;
-      font-weight: bold;
-      padding: 10px 16px;
-      border-radius: 8px;
-      margin: 10px 10px 0 0;
       text-decoration: none;
+      background: #52b788;
+      color: #fff;
+      font-weight: bold;
+      padding: 12px 18px;
+      border-radius: 10px;
       transition: 0.3s;
+      margin: 10px 10px 0 0;
+      cursor: pointer;
+      user-select: none;
+      border: none;
+      font-size: 14px;
     }
-
     .btn:hover {
       background: #1b4332;
-      color: #fff;
       transform: translateY(-2px);
     }
 
-    .btn i {
-      margin-right: 6px;
-    }
-
     footer {
-      position: fixed;
-      bottom: 10px;
-      width: 100%;
       text-align: center;
-      color: #95d5b2;
+      margin-top: 20px;
+      color: #40916c;
       font-size: 13px;
+      z-index: 10;
+      position: relative;
+      user-select: none;
     }
 
+    /* Balls falling */
     .ball {
       position: fixed;
       pointer-events: none;
-      z-index: 1;
+      z-index: 5;
       animation: moveBall linear forwards;
+      user-select: none;
     }
-
     @keyframes moveBall {
-      0% { transform: translateY(-10vh) rotate(0deg); opacity: 0; }
-      10% { opacity: 1; }
-      50% { transform: translateY(50vh) rotate(180deg); opacity: 0.9; }
-      100% { transform: translateY(110vh) rotate(360deg); opacity: 0; }
+      0% {
+        transform: translateY(-10vh) rotate(0deg);
+        opacity: 0;
+      }
+      10% {
+        opacity: 1;
+      }
+      50% {
+        transform: translateY(50vh) rotate(180deg);
+        opacity: 0.9;
+      }
+      100% {
+        transform: translateY(110vh) rotate(360deg);
+        opacity: 0;
+      }
     }
 
+    /* Social icons container */
+    .social-icons {
+      margin-top: 15px;
+      display: flex;
+      gap: 18px;
+      align-items: center;
+    }
+
+    /* Social icon style */
+    .social-icons a {
+      display: inline-block;
+      width: 32px;
+      height: 32px;
+      color: #1b4332;
+      transition: color 0.3s ease;
+    }
+    .social-icons a:hover {
+      color: #52b788;
+    }
+
+    /* Icon images */
+    .social-icons img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      filter: drop-shadow(0 0 1px rgba(0,0,0,0.15));
+      user-select: none;
+    }
+
+    /* Responsive */
     @media(max-width: 720px) {
       .card {
         grid-template-columns: 1fr;
         text-align: center;
       }
-      .left { border-radius: 20px 20px 0 0; }
+      .left {
+        border-radius: 20px 20px 0 0;
+      }
+      .social-icons {
+        justify-content: center;
+      }
     }
 
-    #music-btn {
-      background: none;
+    /* Music control button */
+    #music-control {
+      position: fixed;
+      top: 15px;
+      right: 15px;
+      background: #52b788;
       border: none;
-      color: #95d5b2;
-      font-size: 18px;
+      border-radius: 50%;
+      width: 44px;
+      height: 44px;
       cursor: pointer;
-      margin-top: 10px;
-      transition: color 0.3s;
+      color: white;
+      font-size: 20px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.3);
+      transition: background-color 0.3s;
+      z-index: 20;
+      user-select: none;
     }
-
-    #music-btn:hover {
-      color: #ffffff;
+    #music-control:hover {
+      background: #1b4332;
     }
   </style>
 </head>
 <body>
+  <!-- Background circles for parallax -->
+  <div class="bg-circle c1"></div>
+  <div class="bg-circle c2"></div>
+  <div class="bg-circle c3"></div>
+
+  <!-- Card -->
   <div class="card">
     <div class="left">
-      <img src="images/pannakron.jpg" alt="pannakron kongsawat" />
+      <img class="avatar" src="https://i.imgur.com/t5w9efJ.jpg" alt="pannakron kongsawat" />
       <h2>Pannakron Kongsawat</h2>
       <p>สมาชิกทีม B-8 Lungs</p>
-      <button id="music-btn"><i class="fas fa-volume-up"></i> หยุดเพลง</button>
+
+      <div class="social-icons" aria-label="ช่องทางโซเชียล">
+        <a href="https://www.facebook.com/pannakron.kongsawat" target="_blank" rel="noopener" aria-label="Facebook">
+          <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook icon" />
+        </a>
+        <a href="https://www.instagram.com/more_phiny" target="_blank" rel="noopener" aria-label="Instagram">
+          <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram icon" />
+        </a>
+        <a href="https://www.mancity.com" target="_blank" rel="noopener" aria-label="Manchester City logo">
+          <img src="https://upload.wikimedia.org/wikipedia/en/e/eb/Manchester_City_FC_badge.svg" alt="Manchester City logo" style="filter: drop-shadow(0 0 2px rgba(0,0,0,0.2));" />
+        </a>
+      </div>
     </div>
 
     <div class="right">
       <h3>เกี่ยวกับฉัน</h3>
       <div class="chips">
-        <span class="chip">🎮 เล่นเกม</span>
-        <span class="chip">⚽ เล่นกีฬา</span>
-        <span class="chip">🌍 ฝัน: นักบอลระดับโลก</span>
+        <span class="chip">Hobby: เล่นเกม</span>
+        <span class="chip">Hobby: เล่นกีฬา</span>
+        <span class="chip">Future: Football worldclass player</span>
       </div>
 
       <div class="info">
-        <p><b><i class="fas fa-envelope"></i> Email:</b> pannakorn.kongsawat@gmail.com</p>
-        <p><b><i class="fab fa-facebook"></i> Facebook:</b> pannakron kongsawat</p>
-        <p><b><i class="fab fa-instagram"></i> Instagram:</b>
-          <a href="https://instagram.com/more_phiny" target="_blank" style="color:#e1306c; text-decoration: underline;">
-            @more_phiny
-          </a>
-        </p>
+        <p><b>Email:</b> pannakorn.kongsawat@gmail.com</p>
+        <p><b>Facebook:</b> pannakron kongsawat</p>
       </div>
 
       <div class="info">
-        <p>🎮 เกมที่ชอบ: PES, ROV, LOL</p>
-        <p>💚 รักธรรมชาติ ชอบสีเขียว และฟุตบอล</p>
+        <p>🎮 เกมที่ชอบ: pes, rov, lol</p>
+        <p>💚 ชอบธรรมชาติ สีเขียว และ ฟุตบอล</p>
       </div>
 
-      <!-- ปุ่มลิงก์ -->
-      <a href="../index.html" class="btn"><i class="fas fa-arrow-left"></i> กลับหน้า Team</a>
-      <a href="kittinun.html" class="btn"><i class="fas fa-user"></i> Kittinun</a>
-      <a href="phuttargue.html" class="btn"><i class="fas fa-user"></i> Phuttargue</a>
-      <a href="https://instagram.com/more_phiny" target="_blank" class="btn" style="background:#e1306c; color:#fff;">
-        <i class="fab fa-instagram"></i> @more_phiny
-      </a>
+      <a href="../index.html" class="btn">← กลับหน้า Team</a>
+      <a href="kittinun.html" class="btn">ไปหน้า Kittinun</a>
+      <a href="phuttargue.html" class="btn">ไปหน้า phuttargue</a>
     </div>
   </div>
 
-  <footer>© 2025 Team B-8 • Neon Green Style</footer>
+  <footer>© 2025 Team B-8 • Green Theme</footer>
 
-  <!-- เพลงพื้นหลัง -->
-  <audio id="bg-music" autoplay loop>
-    <source src="music/neymar.mp3" type="audio/mpeg">
+  <!-- Background Music -->
+  <audio id="bg-music" loop>
+    <source src="https://cdn.pixabay.com/download/audio/2022/02/26/audio_92ec578e06.mp3?filename=relaxing-acoustic-guitar-ambient-6276.mp3" type="audio/mpeg" />
     เบราว์เซอร์ของคุณไม่รองรับการเล่นเพลง
   </audio>
 
+  <!-- Music control button -->
+  <button id="music-control" aria-label="เปิด/ปิดเพลง" title="เปิด/ปิดเพลง">▶️</button>
+
   <script>
-    // ลูกบอลตก
+    // Parallax background movement
+    const circles = document.querySelectorAll(".bg-circle");
+    document.addEventListener("mousemove", (e) => {
+      const x = e.clientX / window.innerWidth - 0.5;
+      const y = e.clientY / window.innerHeight - 0.5;
+      circles.forEach((circle, i) => {
+        const factor = (i + 1) * 15;
+        circle.style.transform = translate(${x * factor}px, ${y * factor}px);
+      });
+    });
+
+    // Create falling balls
     function createBall() {
-      const ball = document.createElement('div');
-      ball.textContent = '⚽';
-      ball.classList.add('ball');
-      ball.style.fontSize = (30 + Math.random() * 40) + 'px';
-      ball.style.left = Math.random() * 100 + 'vw';
-      const duration = 6 + Math.random() * 4;
-      ball.style.animationDuration = duration + 's';
+      const ball = document.createElement("div");
+      ball.textContent = "⚽";
+      ball.classList.add("ball");
+      ball.style.fontSize = (30 + Math.random() * 40) + "px";
+      ball.style.left = Math.random() * 100 + "vw";
+      const duration = 6 + Math.random() * 5;
+      ball.style.animationDuration = duration + "s";
       document.body.appendChild(ball);
-      ball.addEventListener('animationend', () => {
+      ball.addEventListener("animationend", () => {
         ball.remove();
         createBall();
       });
     }
+    for (let i = 0; i < 12; i++) {
+      setTimeout(createBall, i * 1000);
+    }
 
-    for (let i = 0; i < 10; i++) {
-      setTimeout(createBall, i * 
+    // Music control
+    const music = document.getElementById("bg-music");
+    const musicBtn = document.getElementById("music-control");
+    let isPlaying = false;
 
-      setInterval(() => createBgSakura(), 4000);
-window.addEventListener('load', () => {
-      const music = document.getElementById('bg-music');
-      music.muted = false; // ปลด mute เพื่อให้มีเสียง
-      music.play().catch(() => {
-        console.log("ผู้ใช้ต้องคลิกเพื่อเปิดเสียง");
+    function updateButton() {
+      musicBtn.textContent = isPlaying ? "⏸️" : "▶️";
+    }
+
+    musicBtn.addEventListener("click", () => {
+      if (isPlaying) {
+        music.pause();
+      } else {
+        music.play().catch(() => {
+          alert("โปรดคลิกที่ปุ่มอีกครั้งเพื่อเปิดเสียง");
+        });
+      }
+      isPlaying = !isPlaying;
+      updateButton();
+    });
+
+    // Auto play muted then unmute on user interaction (some browsers block auto play with sound)
+    window.addEventListener("load", () => {
+      music.volume = 0.4;
+      music.play().then(() => {
+        isPlaying = true;
+        updateButton();
+      }).catch(() => {
+        isPlaying = false;
+        updateButton();
       });
     });
-    </script>
+  </script>
+</body>
+</html>
